--- a/FazalOil/Views/Main/addproduct.cshtml
+++ b/FazalOil/Views/Main/addproduct.cshtml
@@ -371,6 +371,36 @@
         </nav>
 
         <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Add Product</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10">
+                    <form role="form">
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Enter Product">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Enter Product">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Enter Product">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Enter Product">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Enter Product">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit Button</button>
+                        <button type="reset" class="btn btn-default">Reset Button</button>
+                    </form>
+                </div>
+                <div class="col-lg-1"></div>
+            </div>
             
         </div>
         <!-- /#page-wrapper -->
