--- a/FazalOil/Views/Main/Index.cshtml
+++ b/FazalOil/Views/Main/Index.cshtml
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <title>Al Fazal Oil Agency</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -48,7 +48,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Fazail Oil Store</a>
+                <a class="navbar-brand" href="/Main/Index">Al Fazal Oil Agency</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -286,13 +286,16 @@
                                     <a href="/Main/AddProduct">Add product</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Update product</a>
+                                    <a href="/Main/UpdateProduct">Update product</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="tables.html"><i class="fa fa-table fa-fw"></i> Invoice</a>
+                            <a href="/Main/Stock"><i class="fa fa-th-list fa-fw"></i> Stock</a>
+                        </li>
+                        <li>
+                            <a href="/Main/Invoice"><i class="fa fa-table fa-fw"></i> Invoice</a>
                         </li>
                     <!--<li>
                             <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
@@ -395,7 +398,7 @@
     <!-- Custom Theme JavaScript -->
     <script src="~/dist/js/sb-admin-2.js"></script>
 
-    <script src="~/Scripts/custom.js"></script>
+   <script src="~/Scripts/custom.js"></script>
 
 </body>
 
