--- a/FazalOil/Views/Main/Stock.cshtml
+++ b/FazalOil/Views/Main/Stock.cshtml
@@ -375,6 +375,7 @@
                                         <th>Name of Product</th>
                                         <th>Quantity</th>
                                         <th>No. of Litres</th>
+                                        <th>No. of Cans</th>
                                         <th>Purchasing Date</th>
                                         <th>Price</th>
                                     </tr>
@@ -384,6 +385,7 @@
                                         <td>Zic A+</td>
                                         <td>112</td>
                                         <td>250</td>
+                                        <td>250</td>
                                         <td class="center">12-4-2018</td>
                                         <td class="center">1200</td>
                                     </tr>
@@ -391,19 +393,6 @@
                                         <td>Zic A+</td>
                                         <td>112</td>
                                         <td>250</td>
-                                        <td class="center">12-4-2018</td>
-                                        <td class="center">1200</td>
-                                    </tr>
-                                    <tr class="odd gradeA">
-                                        <td>Zic A+</td>
-                                        <td>112</td>
-                                        <td>250</td>
-                                        <td class="center">12-4-2018</td>
-                                        <td class="center">1200</td>
-                                    </tr>
-                                    <tr class="even gradeA">
-                                        <td>Zic A+</td>
-                                        <td>112</td>
                                         <td>250</td>
                                         <td class="center">12-4-2018</td>
                                         <td class="center">1200</td>
@@ -412,10 +401,27 @@
                                         <td>Zic A+</td>
                                         <td>112</td>
                                         <td>250</td>
+                                        <td>250</td>
                                         <td class="center">12-4-2018</td>
                                         <td class="center">1200</td>
                                     </tr>
                                     <tr class="even gradeA">
+                                        <td>Zic A+</td>
+                                        <td>112</td>
+                                        <td>250</td>
+                                        <td>250</td>
+                                        <td class="center">12-4-2018</td>
+                                        <td class="center">1200</td>
+                                    </tr>
+                                    <tr class="odd gradeA">
+                                        <td>Zic A+</td>
+                                        <td>112</td>
+                                        <td>250</td>
+                                        <td>250</td>
+                                        <td class="center">12-4-2018</td>
+                                        <td class="center">1200</td>
+                                    </tr>
+                                    <!--<tr class="even gradeA">
                                         <td>Zic Hiflo</td>
                                         <td>89</td>
                                         <td>110</td>
@@ -467,6 +473,7 @@
                                     <tr class="gradeA">
                                         <td>Zic Hiflo</td>
                                         <td>89</td>
+                                        <td>250</td>
                                         <td>110</td>
                                         <td class="center">01-02-2018</td>
                                         <td class="center">950</td>
@@ -483,6 +490,7 @@
                                         <td>Shell 20/50</td>
                                         <td>102</td>
                                         <td>250</td>
+                                        <td>250</td>
                                         <td class="center">18-01-2018</td>
                                         <td class="center">950</td>
                                     </tr>
@@ -497,12 +505,6 @@
                                         <td>Shell 20/50</td>
                                         <td>102</td>
                                         <td>250</td>
-                                        <td class="center">18-01-2018</td>
-                                        <td class="center">950</td>
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td>Shell 20/50</td>
-                                        <td>102</td>
                                         <td>250</td>
                                         <td class="center">18-01-2018</td>
                                         <td class="center">950</td>
@@ -518,12 +520,6 @@
                                         <td>Shell 20/50</td>
                                         <td>102</td>
                                         <td>250</td>
-                                        <td class="center">18-01-2018</td>
-                                        <td class="center">950</td>
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td>Shell 20/50</td>
-                                        <td>102</td>
                                         <td>250</td>
                                         <td class="center">18-01-2018</td>
                                         <td class="center">950</td>
@@ -538,6 +534,22 @@
                                     <tr class="gradeA">
                                         <td>Shell 20/50</td>
                                         <td>102</td>
+                                        <td>250</td>
+                                        <td>250</td>
+                                        <td class="center">18-01-2018</td>
+                                        <td class="center">950</td>
+                                    </tr>
+                                    <tr class="gradeA">
+                                        <td>Shell 20/50</td>
+                                        <td>102</td>
+                                        <td>250</td>
+                                        <td class="center">18-01-2018</td>
+                                        <td class="center">950</td>
+                                    </tr>
+                                    <tr class="gradeA">
+                                        <td>Shell 20/50</td>
+                                        <td>102</td>
+                                        <td>250</td>
                                         <td>250</td>
                                         <td class="center">18-01-2018</td>
                                         <td class="center">950</td>
@@ -546,6 +558,14 @@
                                         <td>Havoleen Formula</td>
                                         <td>56</td>
                                         <td>112</td>
+                                        <td class="center">03-05-2018</td>
+                                        <td class="center">1350</td>
+                                    </tr>
+                                    <tr class="gradeA">
+                                        <td>Havoleen Formula</td>
+                                        <td>56</td>
+                                        <td>112</td>
+                                        <td>250</td>
                                         <td class="center">03-05-2018</td>
                                         <td class="center">1350</td>
                                     </tr>
@@ -562,19 +582,13 @@
                                         <td>112</td>
                                         <td class="center">03-05-2018</td>
                                         <td class="center">1350</td>
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td>Havoleen Formula</td>
-                                        <td>56</td>
-                                        <td>112</td>
-                                        <td class="center">03-05-2018</td>
-                                        <td class="center">1350</td>
-                                        </td>
+                                       
                                     </tr>
                                     <tr class="gradeC">
                                         <td>Havoleen Formula</td>
                                         <td>56</td>
                                         <td>112</td>
+                                        <td>250</td>
                                         <td class="center">03-05-2018</td>
                                         <td class="center">1350</td>
                                     </tr>
@@ -638,6 +652,7 @@
                                         <td>Zic Hiflo</td>
                                         <td>89</td>
                                         <td>110</td>
+                                        <td>250</td>
                                         <td class="center">01-02-2018</td>
                                         <td class="center">950</td>
                                     </tr>
@@ -668,7 +683,7 @@
                                         <td>110</td>
                                         <td class="center">01-02-2018</td>
                                         <td class="center">950</td>
-                                    </tr>
+                                    </tr>-->
                                 </tbody>
                             </table>
 
