--- a/FazalOil/Views/Main/Invoice.cshtml
+++ b/FazalOil/Views/Main/Invoice.cshtml
@@ -26,6 +26,11 @@
     <!-- Custom Fonts -->
     <link href="~/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <!-- Modal CSS-->
+    <!--<link rel="stylesheet" href="~/Content/modal/bootstrap.min.css">
+    <script src="~/Content/modal/jquery.min.js"></script>
+    <script src="~/Content/modal/bootstrap.min.js"></script>-->
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -330,10 +335,10 @@
                                     <input id="txtCustomerName" class="form-control" placeholder="Customer Name">
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-lg-2">
                                 <div class="form-group">
                                     <label>Vehicle Details:</label>
-                                    <button type="button" class="btn btn-success">+ Add Vehicle Details</button>
+                                    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">+ Add Vehicle Details</button>
                                 </div>
                             </div>
                             <div class="col-lg-2">    
@@ -362,7 +367,9 @@
                                                 <thead>
                                                     <tr>
                                                         <th class="col-lg-1">Sr#</th>
-                                                        <th class="col-sm-6">Product Name</th>
+                                                        <th class="col-sm-4">Product Name</th>
+                                                        <th class="col-sm-1">Litres</th>
+                                                        <th class="col-sm-1">Cans</th>
                                                         <th class="col-sm-2">Rate</th>
                                                         <th class="col-lg-1">Quantity</th>
                                                         <th class="col-lg-1">Total</th>
@@ -375,6 +382,8 @@
                                                         <td>Shell Advance</td>
                                                         <td><input class="form-control"></td>
                                                         <td><input class="form-control"></td>
+                                                        <td><input class="form-control"></td>
+                                                        <td><input class="form-control" disabled></td>
                                                         <td>1080</td>
                                                         <td><button type="button" class="btn btn-link">Delete</button></td>
                                                     </tr>
@@ -383,6 +392,8 @@
                                                         <td>Zic A+</td>
                                                         <td><input class="form-control"></td>
                                                         <td><input class="form-control"></td>
+                                                        <td><input class="form-control"></td>
+                                                        <td><input class="form-control" disabled></td>
                                                         <td>2300</td>
                                                         <td><button type="button" class="btn btn-link">Delete</button></td>
                                                     </tr>
@@ -391,6 +402,8 @@
                                                         <td>Air Filter</td>
                                                         <td><input class="form-control"></td>
                                                         <td><input class="form-control"></td>
+                                                        <td><input class="form-control"></td>
+                                                        <td><input class="form-control" disabled></td>
                                                         <td>400</td>
                                                         <td><button type="button" class="btn btn-link">Delete</button></td>
                                                     </tr>
@@ -399,6 +412,8 @@
                                                         <td>Shell Rimula</td>
                                                         <td><input class="form-control"></td>
                                                         <td><input class="form-control"></td>
+                                                        <td><input class="form-control"></td>
+                                                        <td><input class="form-control" disabled></td>
                                                         <td>1080</td>
                                                         <td><button type="button" class="btn btn-link">Delete</button></td>
                                                     </tr>
@@ -423,13 +438,13 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-7">
+                                        <div class="col-lg-6">
                                             <div class="form-group">
                                                 <label>Comments:</label>
                                                 <textarea class="form-control" rows="4"></textarea>
                                             </div>
                                         </div>
-                                        <div class="col-lg-1">
+                                        <div class="col-lg-2">
                                             <div class="row">
                                                 <div class="form-group">
                                                     <label class="checkbox-inline">
@@ -453,8 +468,8 @@
                                 <div class="col-lg-2">
                                     <div class="row">
                                         <div class="form-group">
-                                            <label>Net Total: </label>
-                                            <textarea id="txtNetTotal" class="form-control" rows="2" disabled></textarea>
+                                            <label>Net Total: </label>                                        
+                                            <input type="text" id="txtNetTotal" class="form-control input-lg" disabled>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -465,20 +480,111 @@
                                     <div class="row">
                                         <div class="form-group">
                                             <label>Cash: </label>
-                                            <textarea id="txtCash" class="form-control" rows="2"></textarea>
+                                            <input type="number" id="txtCash" class="form-control input-lg">
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="form-group">
                                             <label>Balance: </label>
-                                            <input type="number" id="txtBalance" class="form-control" disabled>
+                                            <input type="text" id="txtBalance" class="form-control input-default" disabled>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="form-group">
+                                            <button type="button" class="btn btn-outline btn-success">Generate Invoice</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     
+                         <!-- Modal -->
+                          <div class="modal fade" id="myModal" role="dialog">
+                            <div class="modal-dialog">
+                            
+                              <!-- Modal content-->
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                  <h4 class="modal-title">Vehicle Details</h4>
+                                </div>
+                                <div class="modal-body">
+                                  
+                                      <div class="row">
+                                        <div class="col-lg-4">
+                                            <div class="form-group">
+                                                <label>Vehicle Number: </label>
+                                                <input type="text" id="txtVehicleNumber" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <div class="form-group">
+                                                <label>Customer Name: </label>
+                                                <input type="text" id="txtDriverName" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <div class="form-group">
+                                               <label>Worker Name:</label>
+                                               <select id="selectWorkerName" class="form-control">
+                                                   <option>Bilal</option>
+                                                   <option>Awais</option>
+                                               </select>
+                                            </div>
+                                        </div>
+                                      </div>
+                                      <div class="row">
+                                        <div class="col-lg-4">
+                                            <div class="form-group">
+                                                <label>Mobil Oil: </label>
+                                                <input type="text" id="txtMobilOil" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <div class="form-group">
+                                                <label>Oil Filter: </label>
+                                                <input type="text" id="txtOilFilter" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <div class="form-group">
+                                               <label>Air Filter: </label>
+                                                <input type="text" id="txtAirFilter" class="form-control">
+                                            </div>
+                                        </div>
+                                      </div>
+                                      <div class="row">
+                                        <div class="col-lg-4">
+                                            <div class="form-group">
+                                                <label>Current Reading: </label>
+                                                <input type="text" id="txtCurrentReading" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <div class="form-group">
+                                                <label>Expected km: </label>
+                                                <input type="text" id="txtExpectedkm" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <div class="form-group">
+                                               <label>Next Change: </label>
+                                                <input type="text" id="txtNextChange" class="form-control" disabled>
+                                            </div>
+                                        </div>
+                                      </div>
+                                   
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-default">Save Details</button>
+                                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                              </div>
+                              
+                            </div>
+                          </div>
                 </div>
+                
         </div>
         <!-- /#page-wrapper -->
 
